Evgeny's MySQL class integrated and tables now created on server's first request being recieved (if there are no tables).

--- a/com.liftme/WebContent/WEB-INF/web.xml
+++ b/com.liftme/WebContent/WEB-INF/web.xml
@@ -14,4 +14,9 @@
     <servlet-name>Jersey REST Service</servlet-name>
     <url-pattern>/rest/*</url-pattern>
   </servlet-mapping>
+	<listener>
+	    <listener-class>
+	        mysql.MySQLAccess
+	    </listener-class>
+	</listener>
 </web-app>
